nohup.out

  File "runtests.py", line 1
    B65;5603;1c# Brute force parameter optimization for TSM2
              ^
SyntaxError: invalid syntax
